fixed sonarqube code-smells in user-microservice